# phoenix-mwi

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: CODE_GUIDE_codebase-and-algorithm-from-zero.md  F1_Tutorial_2D-MoM-and-Mie-validation.md  F1_Tutorial_2D-MoM正演与Mie验证.md  F1_milestone.md  F2_Tutorial_CG-FFT-matrix-free-solver.md  F2_milestone.md  F2_milestone_DRAFT_reference.md  I1_Tutorial_Born-linear-inversion.md  I1_milestone.md  I2_Tutorial_Distorted-Born-iterative-method.md  I3_Tutorial_Contrast-Source-Inversion.md  P1H_Tutorial_Phase1-hardening-and-release-pipeline.md  P1H_YAML_Schema_Reference.md  P1H_milestone.md  P1_Tutorial_Benchmark-Evaluation-DAS-and-Reporting.md  P1_milestone.md  P2B_Tutorial_Measured-DAS-ORR-and-artifact-removal-from-zero-to-100.md  P2B_milestone.md  P2_Measurement_Schema_Reference.md  P2_Tutorial_Measured-Data-from-zero-to-100.md  P2_milestone.md  PHASE0_milestone.md  phase1_benchmark_metrics.json  phase1_benchmark_report.md  phase1_hardening_metrics.json  phase1_hardening_report.md
examples/: phase1_hardening.yaml
hls/: README.md
mwisim/: __init__.py  green.py  grid.py  metrics.py  mie.py  mom.py  operators.py  pipeline.py
notebooks/: phase1_hardening_platform_demo.ipynb
phantoms/: README.md
scripts/: run_f1.py  run_f2.py  run_i1.py  run_i2.py  run_i3.py  run_p2_um_bmid.py  run_p2b_measured_imaging.py  run_phase1_benchmark.py  run_phase1_hardening.py  run_phase1_pipeline.py
tests/: test_f1.py  test_f2.py  test_i1.py  test_i2.py  test_i3.py  test_p1c_das.py  (+14 more)
(+46 files in other folders)
