[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-mwi"
version = "0.1.0"
description = "2D/3D microwave imaging forward & inverse simulation (breast / bone density research)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Charley Chang" }]
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["mwisim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
